# XET-Video-Downloader

./: .gitignore  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  crawler_example.py  examples.py  main.py  pyproject.toml  roadshow_results.csv  roadshow_results.json  setup.sh  urls.txt.example
crawler/: __init__.py  __main__.py  roadshow_crawler.py
