[project]
name = "xet-video-downloader"
version = "0.1.0"
description = "小鹅通视频批量下载工具 - 使用 Playwright 捕获 m3u8 地址并通过 yt-dlp 下载"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "examples.py"]

[dependency-groups]
dev = []

